guestbook/base/guestbook-ui-svc.yaml
apiVersion: v1
kind: Service
metadata: # kpt-merge: /guestbook-ui
  name: guestbook-ui
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: guestbook-ui
