guestbook/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ui
spec:
  defaultBackend:
    service:
      name: guestbook-ui
      port:
        number: 80
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: guestbook-ui
            port:
              number: 80
        path: /
        pathType: Exact
